--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -3,7 +3,7 @@ body {
 	text-align: center;
 }
 #home {
-	color: black;
+	color: white;
 	background-image: url(https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png);
 	font-size: 18px;
 }
